k8s/app/templates/app-clusterIP.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: app
  ports:
    - port: 8080
      targetPort: 8080
